--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://www.amazon.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon clone</title>
+    <meta name="description"
+      content="This amazon clone web site is for educational use only to present for school project and developed by biruk jira g. " />
+    <title>Amazon clone || biruk jira</title>
   </head>
   <body>
     <div id="root"></div>
